# Summit_project

./: README.md  db.sqlite3  manage.py  notes.txt  pyproject.toml
Summit/: asgi.py  settings.py  urls.py  wsgi.py
api/: serializers.py  views.py
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_appuser.py  0003_blog_author.py  0004_auto_20210816_1339.py
blog/templates/blog/: blog_update.html  index.html
store/: admin.py  forms.py  models.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_auto_20210816_2039.py
store/templates/store/: all_products.html  blog_create.html  blog_detail.html  category_create.html  category_detail.html  category_update.html  main.html
